--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "session-file-store": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^5.0.1",
